'fixed' cheburashka model and examples to use it, draw skeletons
Former-commit-id: eb0f26d833c1086f74713a5eafa9fdcd30ec835d

--- a/examples/quicklook-mesh/README
+++ b/examples/quicklook-mesh/README
@@ -28,7 +28,7 @@ Then re-install GLU à la http://www.alecjacobson.com/weblog/?p=2827
 
 After installing you can test previews with:
 
-    /usr/bin/qlmanage -p ../shared/cheburashka.obj
+    /usr/bin/qlmanage -p ../shared/cheburashka.off
 
 and thumbnails with:
 
