geometric cotangent, volume, face areas, edge lengths for tet meshes
Former-commit-id: 5ff193ae71315779e5ec0ebfe26696aae43edef7

--- a/documentation/implemented-papers.tex
+++ b/documentation/implemented-papers.tex
@@ -38,6 +38,17 @@ choosing skinning transformations \cite{Jacobson:FAST:2012}.
 ``skeletal subspace deformation'', or ``enveloping''. This technique is often
 attributed to \cite{Magnenat-Thalmann:1988:JLD}.
 
+  % appears in the appendix of: ``Interactive Topology-aware Surface
+  % Reconstruction,'' by Sharf, A. et al
+  %
+  % versus
+  %
+  % ND derivation given in "A MONOTONE FINITE ELEMENT SCHEME FOR
+  % CONVECTION-DIFFUSION EQUATIONS" [Xu & ZIKATANOV 1999]
+  %
+  % 3D derivation given in "Aspects of unstructured grids and finite-volume
+  % solvers for the Euler and Navier-Stokes equations" [Barth 1992]
+
 \bibliographystyle{acmsiggraph}
 \bibliography{references} 
 
