added cot3 references

--- a/documentation/references.bib
+++ b/documentation/references.bib
@@ -7346,14 +7346,6 @@
   issn = {0167-7055}
 }
 
-@INPROCEEDINGS{PoissonSurfaceReconstruction06,
-  author = {Kazhdan, Michael and Bolitho, Matthew and Hoppe, Hugues},
-  title = {Poisson surface reconstruction},
-  booktitle = p-SGP,
-  year = {2006},
-  pages = {61--70}
-}
-
 @PHDTHESIS{Keckeisen:2005:PCS,
   author = {Keckeisen, Michael},
   title = {Physical Cloth Simulation and Applications for the Visualization,
@@ -15865,3 +15857,445 @@ number    = {2}
   volume = {31},
   number = {4}
 }
+
+@article{Sharf:2007vv,
+  author = {Sharf, A and Lewiner, T and Shklarski, G and Toledo, S},
+  title = {{Interactive topology-aware surface reconstruction}},
+  journal = j-TOG,
+  volume = {26},
+  number = {3},
+  year = {2007}
+}
+
+@article{Labelle:2007fa,
+author = {Labelle, Fran{\c c}ois and Shewchuk, Jonathan Richard},
+title = {{Isosurface stuffing: fast tetrahedral meshes with good dihedral angles}},
+journal = j-TOG,
+ volume = {26},
+  number = {3},
+year = {2007},
+}
+
+@article{Berger:2012vj,
+author = {Berger, M and Silva, C T},
+title = {{Medial kernels}},
+journal = j-CGF,
+year = {2012},
+volume = {31},
+number = {2pt4},
+pages = {795--804}
+}
+
+@article{FEDOTOV:1999tu,
+author = {FEDOTOV, I and DRAGOMIR, S S},
+title = {{ON NUMERICAL EVALUATION OF THE WINDING NUMBER OF A PLANE VECTOR FIELD}},
+year = {1999}
+}
+
+@inproceedings{Kazhdan:2006vg,
+  author = {Kazhdan, Michael and Bolitho, Matthew and Hoppe, Hugues},
+  title = {Poisson surface reconstruction},
+  booktitle = p-SGP,
+  year = {2006},
+}
+
+@article{Wan:2012us,
+author = {Wan, M and Wang, Y and Bae, E and Tai, X and Wang, D},
+title = {Reconstructing Open Surfaces via Graph-Cuts},
+year = {2012},
+journal = j-TVCG,
+volume = {19},
+number = {2},
+}
+
+@article{Wan:2011tt,
+author = {Wan, M and Wang, Y and Wang, D},
+title = {{Variational surface reconstruction based on Delaunay triangulation
+and graph cut}},
+journal = ijnme,
+year = {2011}
+}
+
+@inproceedings{Yamakawa:2009us,
+author = {Yamakawa, S and Shimada, K},
+title = {Removing self intersections of a triangular mesh by edge swapping, edge hammering, and face lifting},
+booktitle = p-IMR,
+year = {2009},
+}
+
+@article{Labatut:2009tj,
+author = {Labatut, P and Pons, JP and Keriven, R},
+title = {{Robust and efficient surface reconstruction from range data}},
+journal = {Computer Graphics Forum},
+year = {2009}
+}
+
+@inproceedings{Hornung:2006ua,
+author = {Hornung, Alexander and Kobbelt, Leif},
+title = {{Robust reconstruction of watertight 3D models from non-uniformly sampled point clouds without normal information}},
+booktitle = p-SGP,
+year = {2006},
+month = jun
+}
+
+@article{Jung:2004wq,
+author = {Jung, W and Shin, H and Choi, B K},
+title = {{Self-intersection removal in triangular mesh offsetting}},
+journal = j-CADA,
+year = {2004},
+volume = {1},
+number = {1-4},
+}
+
+@article{Nooruddin:2003vk,
+author = {Nooruddin, F S and Turk, G},
+title = {{Simplification and repair of polygonal models using volumetric techniques}},
+journal = j-TVCG,
+year = {2003},
+volume = {9},
+number = {2},
+}
+
+@article{Aftosmis:1997wd,
+author = {Aftosmis, M J},
+title = {{Solution adaptive Cartesian grid methods for aerodynamic flows with complex geometries}},
+journal = {VKI Lecture Series},
+year = {1997}
+}
+
+@inproceedings{Kolluri:2004wb,
+author = {Kolluri, R. and Shewchuk, J.R. and O'Brien, J.F.},
+title = {Spectral surface reconstruction from noisy point clouds},
+booktitle = p-SGP,
+year = {2004},
+}
+
+@article{Crane:2011hz,
+  author = {Crane, Keenan and Pinkall, Ulrich and Schr{\"o}der, Peter},
+  title = {{Spin transformations of discrete surfaces}},
+  journal = j-TOG,
+  year = {2011},
+  volume = {30},
+  number = {4}
+}
+
+@inproceedings{Cavalcanti:1999ut,
+author = {Cavalcanti, P R and Mello, U T},
+title = {{Three-dimensional constrained Delaunay triangulation: A minimalist approach}},
+booktitle = p-IMR,
+year = {1999}
+}
+
+@article{Joe:1989vo,
+author = {Joe, B},
+title = {{Three-dimensional triangulations from local transformations}},
+journal = {SIAM Journal on Scientific and Statistical Computing},
+year = {1989}
+}
+
+@inproceedings{Dey:2003jf,
+author = {Dey, Tamal K and Goswami, Samrat},
+title = {Tight cocone: a water-tight surface reconstructor},
+booktitle = p-SM,
+year = {2003},
+}
+
+@article{Shewchuk:2012we,
+author = {Shewchuk, J.R.},
+title = {Unstructured Mesh Generation},
+journal = {Combinatorial Scientific Computing},
+year = {2012},
+volume = {12},
+pages = {257}
+}
+
+@article{Alliez:2005ta,
+  author = {Alliez, Pierre and Cohen-Steiner, David and Yvinec, Mariette and
+  Desbrun, M},
+  title = {{Variational tetrahedral meshing}},
+  journal = j-TOG,
+  volume = {24},
+  number = {3},
+  year = {2005},
+}
+
+@article{Zhou:2008ua,
+author = {Zhou, Kun and Zhang, E and Bittner, J and Wonka, P},
+title = {{Visibility-driven mesh analysis and visualization through graph cuts}},
+journal = j-TVCG,
+year = {2008},
+volume = {14},
+number = {6},
+}
+
+@inproceedings{Alliez:2007up,
+author = {Alliez, P and Cohen-Steiner, D and Tong, Y and Desbrun, M},
+title = {{Voronoi-based variational reconstruction of unoriented point sets}},
+booktitle = p-SGP,
+year = {2007},
+month = jul
+}
+
+@article{Kolmogorov:2004ut,
+author = {Kolmogorov, V and Zabin, R},
+title = {{What energy functions can be minimized via graph cuts?}},
+journal = {IEEE PAMI},
+year = {2004},
+volume = {26},
+number = {2},
+}
+
+@misc{cgal,
+  key = {CGAL},
+  title = "\textsc{Cgal}, {C}omputational {G}eometry {A}lgorithms {L}ibrary",
+  note  = "http://www.cgal.org"
+}
+
+@Article{maple,
+  author =       "Bruce Char and Keith Geddes and Gaston Gonnet",
+  title =        "The {Maple} symbolic computation system",
+  journal =      {SIGSAM Bull.},
+  volume =       "17",
+  number =       "3--4",
+  pages =        "31--42",
+  year =         "1983",
+}
+
+@article{gmsh,
+author = {Geuzaine, C and Remacle, J F},
+title = {{\textsc{gmsh}: A 3-D finite element mesh generator with built-in pre- and post-processing}},
+journal = {Numerical Methods in Engineering},
+year = {2009}
+}
+
+
+@inproceedings{Klingner:2007:ATM,
+  title = {Agressive Tetrahedral Mesh Improvement},
+  booktitle = p-IMR, 
+  author = {Bryan Matthew Klingner and Jonathan Richard Shewchuk},
+  year = 2007,
+}
+
+@article{netgen,
+author = {Sch{\"o}berl, J},
+title = {{\textsc{NETGEN}: An advancing front 2D/3D-mesh generator based on abstract
+rules}},
+journal = {Computing and Visualization in Science},
+year = {1997}
+}
+
+@inproceedings{Turk:1994gs,
+author = {Turk, Greg and Levoy, Marc},
+title = {Zippered polygon meshes from range images},
+booktitle = p-SIGGRAPH,
+year = {1994},
+}
+
+
+@article{Mullen:2010ts,
+author = {Mullen, P and De Goes, F and Desbrun, M and Cohen-Steiner, D and Alliez, P},
+title = {{Signing the unsigned: Robust surface reconstruction from raw pointsets}},
+journal = j-CGF,
+year = {2010},
+volume = {29},
+number = {5},
+}
+
+@article{Pietroni:2011gt,
+author = {Pietroni, N and Tarini, M and Sorkine, O and Zorin, D},
+title = {{Global parametrization of range image sets}},
+journal = j-TOG,
+year = {2011},
+volume = {30},
+number = {6},
+}
+
+@inproceedings{Hoppe:1992,
+  author = {Hoppe, H and Derose, T and Duchamp, T and Mcdonald, J and Stuetzle, W},
+  title = {Surface Reconstruction from Unorganized Points},
+  booktitle = p-SIGGRAPH,
+  year = 1992,
+}
+
+@inproceedings{Hoppe:1993,
+  author = {Hoppe, H and Derose, T and Duchamp, T and Mcdonald, J and Stuetzle, W},
+  year = {1993},
+  title = {Mesh Optimization},
+  booktitle = p-SIGGRAPH,
+}
+
+@article{Bischoff:2006us,
+author = {Bischoff, S and Kobbelt, L},
+title = {{Extracting consistent and manifold interfaces from multi-valued
+volume data sets}},
+journal = {Bildverarbeitung f{\"u}r die Medizin 2006},
+year = {2006},
+}
+
+@article{Boykov:2006,
+  author = {Boykov, Y and Funka-Lea, G},
+  title = {Graph cuts and Efficient {ND} Image Segmentation},
+  year = {2006},
+  journal = j-IJCV,
+  volume = {70},
+  number = {2},
+}
+
+@article{Eriksson:1990wy,
+author = {Eriksson, F},
+title = {{On the measure of solid angles}},
+journal = {Mathematics Magazine},
+year = {1990},
+}
+
+@article{Campen:2010fr,
+  author = {Campen, Marcel and Kobbelt, Leif},
+  title = {Exact and Robust \mbox{(self-)intersections} for Polygonal Meshes},
+  journal = j-CGF,
+  year = {2010},
+  volume = {29},
+  number = {2},
+}
+
+@book{O'Rourke:1998:CGC:521378,
+ author = {O'Rourke, Joseph},
+ title = {Computational Geometry in C},
+ year = {1998},
+ edition = {2nd},
+ address = {New York, NY, USA},
+} 
+
+@article{vanOosterom:1983vh,
+author = {van Oosterom, A and Strackee, J},
+title = {The Solid Angle of a Plane Triangle},
+journal = {IEEE Trans.\ Biomedical Engineering},
+volume={30},
+number = {2},
+year = {1983},
+}
+
+@article{Meister:1769,
+  author = {Meister, A.L.F},
+  title = {Generalia de genesi figurarum planarum et inde pendentibus earum ajfectionibus}, 
+  journal = {Novi Comm. Soc. Reg. Scient. Gotting.},
+  year = {1769/70},
+  pages = {144--180+9 plates},
+}
+
+@article{Takayama:2008,
+  author = {Takayama, Kenshi and Okabe, Makoto and Ijiri, Takashi and Igarashi, Takeo},
+  title = {Lapped Solid Textures: Filling a Model with Anisotropic Textures},
+  journal = j-TOG,
+  volume = {27},
+  number = {3},
+  year = {2008},
+}
+
+@article{BischoffK05,
+  author    = {Stephan Bischoff and
+               Leif Kobbelt},
+  title     = {Structure Preserving {CAD} Model Repair},
+  journal   = j-CGF,
+  volume    = {24},
+  number    = {3},
+  year      = {2005},
+  pages     = {527-536},
+  ee        = {http://dx.doi.org/10.1111/j.1467-8659.2005.00878.x},
+  bibsource = {DBLP, http://dblp.uni-trier.de}
+}
+
+@inproceedings{Bronstein10,
+  author    = {Alexander M. Bronstein and
+               Michael M. Bronstein and
+               Umberto Castellani and
+               Bianca Falcidieno and
+               Andrea Fusiello and
+               Afzal Godil and
+               Leonidas J. Guibas and
+               Iasonas Kokkinos and
+               Zhouhui Lian and
+               Maks Ovsjanikov and
+               Giuseppe Patan{\'e} and
+               Michela Spagnuolo and
+               Roberto Toldo},
+  title     = {{SHREC} 2010: robust large-scale shape retrieval benchmark},
+  booktitle = {Proc.\ 3DOR},
+  year      = {2010},
+  pages     = {71--78},
+}
+
+
+@article{George:1990vz,
+  author = {George, P L and Hecht, F and Saltel, E},
+  title = {Automatic 3{D} mesh generation with prescribed meshed boundaries},
+  journal = {IEEE Transactions on Magnetics},
+  year = {1990},
+  volume = {26},
+  number = {2},
+  pages = {771--774}
+}
+
+@inproceedings{Murali:1997:CSB,
+ author = {Murali, T. M. and Funkhouser, Thomas A.},
+ title = {Consistent solid and boundary representations from arbitrary polygonal data},
+ booktitle = p-I3D,
+ year = {1997},
+} 
+
+@inproceedings{Podolak:2005:AVM,
+ author = {Podolak, Joshua and Rusinkiewicz, Szymon},
+ title = {Atomic volumes for mesh completion},
+ booktitle = p-SGP,
+ year = {2005},
+}
+
+@inproceedings{davis:filling,
+  author = {James Davis and Stephen R. Marschner and Matt Garr and Marc Levoy},
+  title = {Filling Holes in Complex Surfaces using Volumetric Diffusion},
+  booktitle = {Proc.\ 3DPVT},
+  pages = {428--438},
+  year = {2002}, 
+} 
+
+@inproceedings{Houston:2003:UAM,
+ author = {Houston, Ben and Bond, Chris and Wiebe, Mark},
+ title = {A unified approach for modeling complex occlusions in fluid simulations},
+ booktitle = {ACM SIGGRAPH 2003 Sketches \& Applications},
+ year = {2003},
+}
+
+@article{Ju:2004:RRP,
+ author = {Ju, Tao},
+ title = {Robust repair of polygonal models},
+ journal = j-TOG,
+ volume = {23},
+ number = {3},
+ year = {2004}, 
+}
+
+@article{Bischoff:2005:ARP,
+ author = {Bischoff, Stephan and Pavic, Darko and Kobbelt, Leif},
+ title = {Automatic restoration of polygon models},
+ journal = j-TOG,
+ volume = {24},
+ number = {4},
+ year = {2005},
+} 
+
+@article{Xu:1999,
+  author = {Xu, Jinchao and Zikatanov, Ludmil},
+  title = {A MONOTONE FINITE ELEMENT SCHEME FOR CONVECTION-DIFFUSION
+  EQUATIONS},
+  journal = {Mathematics of Computation},
+  year = {1999},
+  }
+
+@article{Barth:1994,
+  author = {Barth, Timothy J.},
+  title = {ASPECTS OF UNSTRUCTURED GRIDS AND FINITE-VOLUME SOLVERS FOR THE EULER
+  AND NAVIER-STOKES EQUATIONS},
+  year = {1994},
+  journal = {VKI Lecture Series},
+  }
+
+
