point to mesh distances in cgal
Former-commit-id: 8e83dfaa1f376c72815d4702beafaedab295fc47

--- a/documentation/implemented-papers.tex
+++ b/documentation/implemented-papers.tex
@@ -40,6 +40,9 @@ choosing skinning transformations \cite{Jacobson:FAST:2012}.
 ``skeletal subspace deformation'', or ``enveloping''. This technique is often
 attributed to \cite{Magnenat-Thalmann:1988:JLD}.
 
+\paragraph{\texttt{winding\_number}} implements ``Generalized Winding Numbers''
+\cite{Jacobson:WN:2013}
+
 \bibliographystyle{acmsiggraph}
 \bibliography{references} 
 
