point to mesh distances in cgal

--- a/documentation/references.bib
+++ b/documentation/references.bib
@@ -16299,3 +16299,11 @@ year = {1983},
   }
 
 
+@ARTICLE{Jacobson:WN:2013,
+  author = {Alec Jacobson and Ladislav Kavan and Olga Sorkine-Hornung},
+  title = {Robust Inside-Outside Segmentation using Generalized Winding
+  Numbers},
+  journal = j-TOG,
+  year = {2013},
+  pages = {to appear},
+}
